# blockchain

./: .gitignore  README.md  pyproject.toml
docs/: 00-project-vision.md  01-block.md  02-blockchain.md  03-hash.md  04-linking-blocks.md  05-blockchain-validation.md  06-transactions.md  07-wallet.md  08-digital-signatures.md  08-wallet-transactions.md  09-block-transactions.md  10-pending-transactions.md  11-create-block-from-pending.md
specs/: block-transactions.md  block.md  blockchain-validation.md  blockchain.md  create-block-from-pending.md  digital-signatures.md  hash.md  linking-blocks.md  pending-transactions.md  transaction.md  wallet-transactions.md  wallet.md
src/blockchain/: block.py  blockchain.py  signature.py  transaction.py  wallet.py
tests/: test_block.py  test_blockchain.py  test_signature.py  test_transaction.py  test_wallet.py
